finish reg/auth/logout with cookies/sessions

--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Authorization</title>
     <link rel="stylesheet" href="authorization.css">
+    <link rel="stylesheet" href="header.css">
+
 </head>
 <body>
+<div th:insert="header :: siteHeader"></div>
 <div class="form-container">
     <form class="auth-form" action="/authorization" method="post">
         <h2>Authorization</h2>
