--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Registration</title>
     <link rel="stylesheet" href="registration.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
+<div th:insert="header :: siteHeader"></div>
 <div class="form-container">
     <form class="register-form" action="/registration" method="post">
         <h2>Registration</h2>
