--- a/src/main/resources/static/authorization.css
+++ b/src/main/resources/static/authorization.css
@@ -1,10 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f3f3f3;
-    display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     margin: 0;
 }
 
@@ -14,6 +12,7 @@ body {
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 350px;
+    margin: 250px auto; /* центрируем по горизонтали, и отступ сверху */
 }
 
 .auth-form h2 {
