--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,1 +1,13 @@
-Hello!
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" href="authorization.css">
+    <link rel="stylesheet" href="header.css">
+</head>
+<body>
+<div th:insert="header :: siteHeader"></div>
+<h1 th:text="'Hello, ' + ${user.login}"></h1>
+</body>
+</html>
