--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div th:insert="header :: siteHeader"></div>
+<div th:insert="~{header :: siteHeader}"></div>
 <div class="form-container">
     <form class="auth-form" action="/authorization" method="post">
         <h2>Authorization</h2>
