--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <body>
-<div th:insert="header :: siteHeader"></div>
+<div th:insert="~{header :: siteHeader}"></div>
 <div class="form-container">
     <form class="register-form" action="/registration" method="post">
         <h2>Registration</h2>
