--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="authorization.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="/header.css">
 </head>
 <body>
 <div th:insert="~{header :: siteHeader}"></div>
-<h1 th:text="'Hello, ' + ${user.login}"></h1>
+<h1></h1>
+<div class="weather-container">
+    <div class="weather-card" th:each="location : ${locations}">
+        <h2 th:text="${location.name} + ', ' + ${location.sys.country}"></h2>
+        <p th:text="'Temperature: ' + ${location.main.temp} + '°C (feels like ' + ${location.main.feelsLike} + '°C)'"></p>
+        <p th:text="'Humidity: ' + ${location.main.humidity} + '%'"></p>
+        <p th:text="'Condition: ' + ${location.weather[0].description}"></p>
+        <form action="/home/delete-location" method="post">
+            <input type="hidden" name="name" th:value="${location.name}">
+            <input type="hidden" name="lat" th:value="${location.coord.lat}">
+            <input type="hidden" name="lon" th:value="${location.coord.lon}">
+            <button type="submit">delete</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
