--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <body>
 <div th:insert="~{header :: siteHeader}"></div>
 <h1></h1>
-<h1 th:if="${isApiError}" th:text="${apiError}"></h1>
+<h1 th:if="${apiError}" th:text="${apiError}"></h1>
 <div class="weather-container">
     <div class="weather-card" th:each="weather : ${locations}">
         <div class="card-header">
