--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -12,7 +12,7 @@
 <div class="form-container">
     <form class="auth-form" action="/authorization" method="post">
         <h2>Authorization</h2>
-        <div class="error-message" th:if="${error}" th:text="${error}"></div>
+        <div class="error-message" th:if="${apiError}" th:text="${apiError}"></div>
         <input type="text" name="login" placeholder="Login" required th:value="${login}">
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
