--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,7 +11,7 @@
 <div class="form-container">
     <form class="register-form" action="/registration" method="post">
         <h2>Registration</h2>
-        <div class="error-message" th:if="${error}" th:text="${error}"></div>
+        <div class="error-message" th:if="${apiError}" th:text="${apiError}"></div>
         <input type="text" name="login" placeholder="Login" required th:value="${login}">
         <input type="password" name="password" placeholder="Password" required>
         <input type="password" name="repeatPassword" placeholder="Repeat Password" required>
